# ipsuip

./: .gitignore  AGENTS.md  CMakeLists.txt  DOCUMENTATION.md  README.md  choose_your_fate.cpp  choose_your_fate.h  countries.cpp  countries.h  countries.ui  enum_variants.h  functions.cpp  functions.h  ip2cidr.awk  ipsuip.pro  main.cpp  mainland.cpp  mainland.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  parallel_parsing.h  qml.qrc  qmldir  timer.cpp
.github/workflows/: release.yml
cert/: CMakeLists.txt  root_certificates.cpp  root_certificates.h
qml/: CountriesDialog.qml  MainWindow.qml  Mainland.qml  MainlandsDialog.qml
qml_prototype/: CMakeLists.txt  main.cpp  main.qml
qml_prototype/components/: Countries.qml  Mainland.qml
qml_prototype/components/styles/: Theme.qml
src/: .qmlls.ini  CMakeLists.txt  main.cpp  qmldir
src/choose_your_fate/: CMakeLists.txt  choose_your_fate.cpp  choose_your_fate.h
src/functions/: CMakeLists.txt  enum_variants.h  functions.cpp  functions.h
src/gui/: CMakeLists.txt  Countries.qml  MainWindow.qml  MainWindowController.cpp  MainWindowController.h  Mainland.qml  mainland.ui
src/http_client/: CMakeLists.txt  http_client_sync_ssl.cpp  http_client_sync_ssl.h  root_certificates.h
src/parallel_parsing/: CMakeLists.txt  parallel_parsing.cpp  parallel_parsing.h
src/qml/: Countries.qml  CountriesDialog.qml  MainWindow.qml  MainlandsDialog.qml
src/timer/: CMakeLists.txt  timer.h
sync-ssl/: CMakeLists.txt  http_client_sync_ssl.cpp
